--- a/tasks/templates/list_tasks.html
+++ b/tasks/templates/list_tasks.html
@@ -36,6 +36,10 @@
                         <h4>{{task.title}}</h4>
                         <p>{{task.description}}</p>
                     </div>
+                    <form action="{% url 'update_task' task.id %}" method="GET">
+                        {% csrf_token %}
+                        <button class="btn btn-warning btn-sm">Editar</button>
+                    </form>
                     <form action="{% url 'delete_task' task.id %}" method="POST">
                         {% csrf_token %}
                         <button class="btn btn-danger btn-sm">Eliminar</button>
